<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context="com.example.foodie.Main_page"
         >
    
<RelativeLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/white"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin" >

    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/welcome"
        android:textColor="#009688"
        android:textSize="50sp" />

    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textView1"
        android:layout_centerHorizontal="true"
        android:orientation="vertical" >

        <Button
            android:id="@+id/button1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="30dp"
            android:layout_marginTop="14dp"
            android:onClick="login"
            android:text="@string/login" />
        <LinearLayout 
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:orientation="vertical"
            android:visibility="gone"
            android:id="@+id/login_layout">
              <TextView
            style="@style/textview"
            android:text="@string/Your_Email_Address" 
            />

        <EditText
            style="@style/editview"
            android:hint="@string/eg_abc_gmail_com" 
            android:id="@+id/lemail"/>
         <TextView
            style="@style/textview"
            android:text="@string/password" 
         />

        <EditText
            style="@style/editview"
            android:inputType="textPassword" 
            android:id="@+id/lpassword"/>
            <Button 
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:text="@string/submit"
                android:onClick="submit"/>
            <Button 
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:text="@string/forgot_password"
                android:onClick="update"/>
        </LinearLayout>

        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/or"
            android:textAppearance="?android:attr/textAppearanceSmall" />

        <Button
            android:id="@+id/button2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:onClick="signup"
            android:text="@string/sign_up" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignRight="@+id/linearLayout2"
        android:layout_below="@+id/linearLayout2"
        android:layout_marginTop="21dp"
        android:orientation="vertical" 
        android:visibility="invisible">

        <TextView
            style="@style/textview"
            android:text="@string/Your_Name" />

        <EditText
            style="@style/editview"
            android:hint="@string/eg_rahul"
            android:id="@+id/name" />

        <TextView
            style="@style/textview"
            android:text="@string/Your_Email_Address" 
           />

        <EditText
            style="@style/editview"
            android:hint="@string/eg_abc_gmail_com" 
             android:id="@+id/semail"/>
         <TextView
            style="@style/textview"
            android:text="@string/password" />

        <EditText
            style="@style/editview"
            android:inputType="textPassword"
            android:hint="@string/password"
            android:id="@+id/spassword" />
        <TextView
            style="@style/textview"
            android:text="@string/confirm_password" />

        <EditText
            style="@style/editview"
            android:inputType="textPassword"
            android:hint="@string/password" 
            android:id="@+id/conpassword"/>

        <TextView
            style="@style/textview"
            android:text="@string/location" />
       <EditText
            style="@style/editview"
            android:hint="@string/address"
            android:id="@+id/address" />
       <Button 
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:text="@string/create_an_account"
            android:onClick="account"/>
    </LinearLayout>

</RelativeLayout>

</ScrollView>