<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >
     <TextView
            style="@style/textview"
            android:text="@string/Your_Email_Address" 
           />

        <EditText
            style="@style/editview"
            android:hint="@string/eg_abc_gmail_com" 
             android:id="@+id/uemail"/>
         <TextView
            style="@style/textview"
            android:text="@string/password" />

        <EditText
            style="@style/editview"
            android:inputType="textPassword"
            android:hint="@string/password"
            android:id="@+id/upassword" />
        <TextView
            style="@style/textview"
            android:text="@string/confirm_password" />

        <EditText
            style="@style/editview"
            android:inputType="textPassword"
            android:hint="@string/password" 
            android:id="@+id/uconpassword"/>
    <Button 
        android:text="change"
        android:id="@+id/change"
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"/>

</LinearLayout>
